fixed b2t button on iOS

--- a/public/stylesheets/cardsListStyle.css
+++ b/public/stylesheets/cardsListStyle.css
@@ -108,4 +108,5 @@
   background-color: white;
   width: 64px;
   height: 64px;
+  padding-top: 16px;
 }
